# godoogle

./: .gitignore  Makefile  README.md  dune-project  godoogle.opam  godoogle.sh
lib/: dune
lib/cmd/: cmd.ml
lib/cmd/help/: cmd_help.ml
lib/cmd/info/: cmd_info.ml
lib/cmd/query/: cmd_query.ml
lib/cmd/search/: cmd_search.ml
lib/consts/: consts.ml
lib/files/: files.ml
lib/helpers/: helpers.ml
test/: dune
